# uharfbuzz

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  MANIFEST.in  README  README.md  README.rst  appveyor.yml  meson.build  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst  reference.rst
examples/: sample.py  uhb-cairo.py
src/: harfbuzz.pxd  harfbuzz.pyx
src/patches/: hb-coretext-unused-variable.patch
src/uharfbuzz/: CMakeLists.txt  __init__.py  _draw_test_funcs.cc  _harfbuzz.pyx  _harfbuzz_test.pyx  charfbuzz.pxd
tests/: test_uharfbuzz.py
tests/data/: AdobeBlank.fea
