[build-system]
requires = [
    # pin setuptools on pypy to workaround this bug: https://github.com/pypa/distutils/issues/283
    "setuptools >= 36.4, < 72.2; platform_python_implementation == 'PyPy'",
    "setuptools >= 36.4; platform_python_implementation != 'PyPy'",
    "wheel",
    "setuptools_scm >= 2.1",
    "cython >= 3.1",
    "pkgconfig"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
# Also skip wheels for free-threaded CPython 3.14 (e.g. 'cp314t') until we
# actually support them. We currently aren't thread-safe as we define HB_NO_MT=1.
skip = ["cp3??t-*"]
enable = ["pypy"]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel.linux]
archs = ["native"]


[tool.black]
extend-exclude = "harfbuzz"
