[build-system]
requires = [
    "setuptools >= 36.4",
    "wheel",
    "setuptools_scm >= 2.1",
    "cython >= 3.1",
    "pkgconfig"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
# Also skip wheels for free-threaded CPython 3.14 (e.g. 'cp314t') until we
# actually support them. We currently aren't thread-safe as we define HB_NO_MT=1.
skip = ["cp38-*", "cp39-*", "cp3??t-*"]
enable = ["pypy"]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel.linux]
archs = ["native"]

# CPython abi3 wheels only need universal2 on macOS
[[tool.cibuildwheel.overrides]]
select = "cp*-macosx*"
macos.archs = ["universal2"]

# Run abi3audit after the default repair commands to scan for abi3 violations
# https://github.com/pypa/abi3audit
[[tool.cibuildwheel.overrides]]
select = "cp*"  # Only CPython, not PyPy
inherit.repair-wheel-command = "append"
repair-wheel-command = "pipx run abi3audit --strict --report {wheel}"

# On Windows, there's no default repair command, so we must copy explicitly
[[tool.cibuildwheel.overrides]]
select = "cp*-win*"
repair-wheel-command = [
    "pipx run abi3audit --strict --report {wheel}",
    "copy {wheel} {dest_dir}",
]

# Disable Limited API for PyPy as the build currently fails, see:
# https://github.com/harfbuzz/uharfbuzz/issues/262#issuecomment-3415144557
# https://cibuildwheel.pypa.io/en/stable/configuration/#overrides
[[tool.cibuildwheel.overrides]]
select = "pp*"
environment = { USE_PY_LIMITED_API = "0" }


[tool.black]
extend-exclude = "harfbuzz"
